--- a/public/Geometry.html
+++ b/public/Geometry.html
@@ -19,7 +19,9 @@
             <a href="Trigonometry.html"> UNIT 4 </a>
         </div>
         <div>
-            <img id="user-photo">
+            <button class="user-button" id="user-button">
+                <img id="user-photo">
+            </button> 
             <button id="log-out-button"> Log out </button>
         </div>
     </nav>
@@ -34,19 +36,19 @@
 
         <div class="link-wrapper">
             <h3> QUICK LINKS TO TOPICS </h3>
-            <a href="">Distance</a> <br>
-            <a href="">Midpoint and Endpoint</a> <br>
-            <a href="">Point of Division</a> <br>
+            <a href="#D">Distance</a> <br>
+            <a href="#MAE">Midpoint and Endpoint</a> <br>
+            <a href="#POD">Point of Division</a> <br>
         </div>
          
         <div class="wrapper">
             <a class="box-link"href="#lessons">
                 Topic List
             </a>
-            <a class="box-link"href="https://static1.squarespace.com/static/58dc5121ebbd1af18052424a/t/58f4eaa1d1758e2a7af1bd3c/1492445859562/CST+4+Notes+-+Analytic.pdf" target="_blank">
+            <a class="box-linkNF"href="https://static1.squarespace.com/static/58dc5121ebbd1af18052424a/t/58f4eaa1d1758e2a7af1bd3c/1492445859562/CST+4+Notes+-+Analytic.pdf" target="_blank">
                 Notes & Formulas
             </a>
-            <a class="box-link"href="https://static1.squarespace.com/static/58dc5121ebbd1af18052424a/t/58f4eac5bf629ab1b430faf3/1492445896274/Workbook+-+ANALYTIC.pdf" target="_blank">
+            <a class="box-linkE"href="https://static1.squarespace.com/static/58dc5121ebbd1af18052424a/t/58f4eac5bf629ab1b430faf3/1492445896274/Workbook+-+ANALYTIC.pdf" target="_blank">
                 Exercise
             </a>
         </div>
@@ -54,7 +56,7 @@
 
     <div class="lessons" id = "lessons">
             
-        <div class="title">
+        <div class="title" id = "D">
             Distance
         </div>
         <div class="wrapper">
@@ -66,7 +68,7 @@
             </a>
         </div>
 
-        <div class="title">
+        <div class="title" id = "MAE">
             Midpoint and Endpoint
         </div>
         <div class="wrapper">
@@ -78,7 +80,7 @@
             </a>
         </div>
 
-        <div class="title">
+        <div class="title" id = "POD">
             Point of Division
         </div>
         <div class="wrapper">
