--- a/public/Statistics.html
+++ b/public/Statistics.html
@@ -19,7 +19,9 @@
             <a href="Trigonometry.html"> UNIT 4 </a>
         </div>
         <div>
-            <img id="user-photo">
+            <button class="user-button" id="user-button">
+                <img id="user-photo">
+            </button>  
             <button id="log-out-button"> Log out </button>
         </div>
     </nav>
@@ -34,31 +36,30 @@
 
         <div class="link-wrapper">
             <h3> QUICK LINKS TO TOPICS </h3>
-            <a href="">Mean, Median, Mode, Range</a> <br>
-            <a href="">Range</a> <br>
-            <a href="">Mean Deviation</a> <br>
-            <a href="">Percentile</a> <br>
-            <a href="">Percentile Backwards</a> <br>
-            <a href="">Correlation - Interpret Graph</a> <br>
-            <a href="">Correlation - Interpret Numeric</a> <br>
-            <a href="">Calculate (estimate) Correlation</a> <br>
-            <a href="">Meyer Line Method</a> <br>
+            <a href="#MMMR">Mean, Median, Mode, Range</a> <br>
+            <a href="#MD">Mean Deviation</a> <br>
+            <a href="#P">Percentile</a> <br>
+            <a href="#PB">Percentile Backwards</a> <br>
+            <a href="#CIG">Correlation - Interpret Graph</a> <br>
+            <a href="#CIN">Correlation - Interpret Numeric</a> <br>
+            <a href="#CEC">Calculate (estimate) Correlation</a> <br>
+            <a href="#MLM">Meyer Line Method</a> <br>
         </div>
 
         <div class="wrapper">
             <a class="box-link"href="#lessons">
                 Topic List
             </a>
-            <a class="box-link"href="https://static1.squarespace.com/static/58dc5121ebbd1af18052424a/t/58f53dc929687f0a600803ab/1492467149716/CST+4+Notes+-+Stats.pdf" target="_blank">
+            <a class="box-linkNF"href="https://static1.squarespace.com/static/58dc5121ebbd1af18052424a/t/58f53dc929687f0a600803ab/1492467149716/CST+4+Notes+-+Stats.pdf" target="_blank">
                 Notes & Formulas
             </a>
-            <a class="box-link"href="https://static1.squarespace.com/static/58dc5121ebbd1af18052424a/t/58f53deb6b8f5be6d65d5c0b/1492467180860/Workbook+-+STATS.pdf" target="_blank">
+            <a class="box-linkE"href="https://static1.squarespace.com/static/58dc5121ebbd1af18052424a/t/58f53deb6b8f5be6d65d5c0b/1492467180860/Workbook+-+STATS.pdf" target="_blank">
                 Exercise
             </a>
         </div>
     </div>
 
-    <div class="lessons" id = "lessons">
+    <div class="lessons" id = "MMMR">
             
         <div class="title">
             Mean, Median, Mode, Range
@@ -72,7 +73,7 @@
             </a>
         </div>
 
-        <div class="title">
+        <div class="title" id = "MD">
             Mean Deviation
         </div>
         <div class="wrapper">
@@ -84,7 +85,7 @@
             </a>
         </div>
         
-        <div class="title">
+        <div class="title" id = "P">
             Percentile
         </div>
         <div class="wrapper">
@@ -96,7 +97,7 @@
             </a>
         </div>
 
-        <div class="title">
+        <div class="title" id = "PB">
             Percentile Backwards
         </div>
         <div class="wrapper">
@@ -108,7 +109,7 @@
             </a>
         </div>
 
-        <div class="title">
+        <div class="title" id = "CIG">
             Correlation - Interpret Graph
         </div>
         <div class="wrapper">
@@ -120,7 +121,7 @@
             </a>
         </div>
 
-        <div class="title">
+        <div class="title" id = "CIN">
             Correlation - Interpret Numeric
         </div>
         <div class="wrapper">
@@ -132,7 +133,7 @@
             </a>
         </div>
 
-        <div class="title">
+        <div class="title" id = "CEC">
             Calculate (estimate) Correlation
         </div>
         <div class="wrapper">
@@ -144,7 +145,7 @@
             </a>
         </div>
 
-        <div class="title">
+        <div class="title" id = "MLM">
             Meyer Line Method
         </div>
         <div class="wrapper">
