--- a/public/index.html
+++ b/public/index.html
@@ -19,34 +19,51 @@
             <a href="Trigonometry.html"> UNIT 4 </a>
         </div>
         <div>
-            <img id="user-photo">
+            <button class="user-button" id="user-button">
+                <img id="user-photo">
+            </button>
             <button id="log-out-button"> Log out </button>
         </div>
     </nav>
 
     <main>
-
+        <p class="XYZM">XYZ <span class="m">M</span><span class="a">a</span><span class="s">s</span><span class="t">t</span><span class="e">e</span><span class="r">r</span><span class="y">y</span></p>
+        <span class="XM"></span>
         <div class="content">
             <div class="container">
-                <div class="box orange">
+                <div class="wrapper">
+                    <div class="box orange">
+                        <p>LINEAR </p>
+                        <p> RELATIONS</p>
+                </div>
+                <img class="img" src="../public/images/Linear.jpg" alt="Linear">
                 </div>
                 <a href="./linear_relations.html"> Go to Linear Relations </a>
             </div>
             <div class="container">
-                <div class="box pink">
-
+                <div class="wrapper">
+                    <div class="box pink">
+                        <p>STATISTICS</p>
+                </div>
+                <img class="img" src="../public/images/Statistic.jpg" alt="Stat">
                 </div>
                 <a href="./Statistics.html"> Go to Statistics </a>
             </div>
             <div class="container">
-                <div class="box green">
-
+                <div class="wrapper">
+                    <div class="box green">
+                        <p>GEOMETRY</p>
+                </div>
+                <img class="img" src="../public/images/Geometry.jpg" alt="Geo">
                 </div>
                 <a href="./Geometry.html"> Go to Geometry </a>
             </div>
             <div class="container">
-                <div class="box orangered">
-
+                <div class="wrapper">
+                    <div class="box orangered">
+                        <span class="tri">TRIGONOMETRY</span>
+                    </div>
+                    <img class="img" src="../public/images/Trigo.jpg" alt="Trigo">
                 </div>
                 <a href="./Trigonometry.html"> Go to Trigonometry </a>
             </div>
