--- a/public/linear_relations.html
+++ b/public/linear_relations.html
@@ -19,7 +19,9 @@
             <a href="Trigonometry.html"> UNIT 4 </a>
         </div>
         <div>
-            <img id="user-photo">
+            <button class="user-button" id="user-button">
+                <img id="user-photo">
+            </button>            
             <button id="log-out-button"> Log out </button>
         </div>
     </nav> 
@@ -34,32 +36,32 @@
 
             <div class="link-wrapper">
                 <h3> QUICK LINKS TO TOPICS </h3>
-                <a href="">Points on the Cartesian Plane</a> <br>
-                <a href="">Slope of a Line</a> <br>
-                <a href="">Equation of a Line (y=ax+b)</a> <br>
-                <a href="">Exceptions in (y=ax+b)</a> <br>
-                <a href="">X & Y Intercepts</a> <br>
-                <a href="">Parallel Lines</a> <br>
-                <a href="">Perpendicular Lines</a> <br>
-                <a href="">Solving a System of Equations</a> <br>
-                <a href="">Comparison Method</a> <br>
-                <a href="">Elimination Method</a> <br>
+                <a href="#POTCP">Points on the Cartesian Plane</a> <br>
+                <a href="#SOAL">Slope of a Line</a> <br>
+                <a href="#EOAL">Equation of a Line (y=ax+b)</a> <br>
+                <a href="#EI">Exceptions in (y=ax+b)</a> <br>
+                <a href="#XYI">X & Y Intercepts</a> <br>
+                <a href="#PL">Parallel Lines</a> <br>
+                <a href="#PLS">Perpendicular Lines</a> <br>
+                <a href="#SASOE">Solving a System of Equations</a> <br>
+                <a href="#CM">Comparison Method</a> <br>
+                <a href="#EM">Elimination Method</a> <br>
             </div>
 
             <div class="wrapper">
                 <a class="box-link"href="#lessons">
                     Topic List
                 </a>
-                <a class="box-link"href="https://static1.squarespace.com/static/58dc5121ebbd1af18052424a/t/58f4ea15d1758e2a7af1b366/1492445720757/CST+4+Notes+-+Linear.pdf" target="_blank">
+                <a class="box-linkNF"href="https://static1.squarespace.com/static/58dc5121ebbd1af18052424a/t/58f4ea15d1758e2a7af1b366/1492445720757/CST+4+Notes+-+Linear.pdf" target="_blank">
                     Notes & Formulas
                 </a>
-                <a class="box-link"href="https://static1.squarespace.com/static/58dc5121ebbd1af18052424a/t/58f4ea4f893fc07c27b2b70b/1492445793985/Workbook+-+LINEAR.pdf" target="_blank">
+                <a class="box-linkE"href="https://static1.squarespace.com/static/58dc5121ebbd1af18052424a/t/58f4ea4f893fc07c27b2b70b/1492445793985/Workbook+-+LINEAR.pdf" target="_blank">
                     Exercise
                 </a>
             </div>
         </div>
 
-        <div class="lessons" id = "lessons">
+        <div class="lessons" id = "POTCP">
             
             <div class="title">
                 Points on the Cartesian Plane
@@ -73,7 +75,7 @@
                 </a>
             </div>
 
-           <div class="title">
+           <div class="title" id = "SOAL"> 
                 Slope of a Line
             </div>
             <div class="wrapper">
@@ -85,7 +87,7 @@
                 </a>
             </div>
 
-             <div class="title">
+             <div class="title" id = "EOAL">
                 Equations of a Line (y=ax+b)
             </div>
             <div class="wrapper">
@@ -97,7 +99,7 @@
                 </a>
             </div>
 
-            <div class="title">
+            <div class="title" id = "EI">
                 Exceptions in (y=ax+b)
             </div>
             <div class="wrapper">
@@ -109,7 +111,7 @@
                 </a>
             </div>
 
-            <div class="title">
+            <div class="title" id = "XYI">
                X & Y Intercepts
             </div>
             <div class="wrapper">
@@ -121,7 +123,7 @@
                 </a>
             </div>
 
-            <div class="title">
+            <div class="title" id = "PL">
                Parallel Lines
             </div>
             <div class="wrapper">
@@ -133,7 +135,7 @@
                 </a>
             </div>
 
-            <div class="title">
+            <div class="title" id = "PLS">
                 Perpendicular Lines
             </div>
             <div class="wrapper">
@@ -145,7 +147,7 @@
                 </a>
             </div>
 
-            <div class="title">
+            <div class="title" id = "SASOE">
                 Solving a System of Equations
             </div>
             <div class="wrapper">
@@ -157,7 +159,7 @@
                 </a>
             </div>
 
-            <div class="title">
+            <div class="title" id = "CM">
                Comparison Method
             </div>
             <div class="wrapper">
@@ -169,7 +171,7 @@
                 </a>
             </div>
 
-            <div class="title">
+            <div class="title" id = "EM">
                 Elimination Method
             </div>
             <div class="wrapper">
