--- a/public/Trigonometry.html
+++ b/public/Trigonometry.html
@@ -19,7 +19,9 @@
             <a href="Trigonometry.html"> UNIT 4 </a>
         </div>
         <div>
-            <img id="user-photo">
+            <button class="user-button" id="user-button">
+                <img id="user-photo">
+            </button> 
             <button id="log-out-button"> Log out </button>
         </div>
     </nav>
@@ -34,21 +36,21 @@
 
         <div class="link-wrapper">
             <h3> QUICK LINKS TO TOPICS </h3>
-            <a href="">Pythagoras</a> <br>
-            <a href="">Soh Cah Toa</a> <br>
-            <a href="">Sine Law</a> <br>
-            <a href="">Hero's Formula</a> <br>
-            <a href="">Trig Formula</a> <br>
+            <a href="#P">Pythagoras</a> <br>
+            <a href="#SCT">Soh Cah Toa</a> <br>
+            <a href="#SL">Sine Law</a> <br>
+            <a href="#HF">Hero's Formula</a> <br>
+            <a href="#TF">Trig Formula</a> <br>
         </div>
 
         <div class="wrapper">
             <a class="box-link"href="#lessons">
                 Topic List
             </a>
-            <a class="box-link"href="https://static1.squarespace.com/static/58dc5121ebbd1af18052424a/t/58f4be7cf7e0ab2b0efe7267/1492434565198/CST+4+Notes+-+Trig.pdf" target="_blank">
+            <a class="box-linkNF"href="https://static1.squarespace.com/static/58dc5121ebbd1af18052424a/t/58f4be7cf7e0ab2b0efe7267/1492434565198/CST+4+Notes+-+Trig.pdf" target="_blank">
                 Notes & Formulas
             </a>
-            <a class="box-link"href="https://static1.squarespace.com/static/58dc5121ebbd1af18052424a/t/58f4c38ae58c62bb162b553f/1492435854788/Workbook+-+TRIG.pdf" target="_blank">
+            <a class="box-linkE"href="https://static1.squarespace.com/static/58dc5121ebbd1af18052424a/t/58f4c38ae58c62bb162b553f/1492435854788/Workbook+-+TRIG.pdf" target="_blank">
                 Exercise
             </a>
         </div>
@@ -56,7 +58,7 @@
 
     <div class="lessons" id = "lessons">
             
-        <div class="title">
+        <div class="title" id = "P">
             Pythagoras
         </div>
         <div class="wrapper">
@@ -68,7 +70,7 @@
             </a>
         </div>
 
-        <div class="title">
+        <div class="title" id = "SCT">
             Soh Cah Toa
         </div>
         <div class="wrapper">
@@ -80,7 +82,7 @@
             </a>
         </div>
 
-        <div class="title">
+        <div class="title" id = "SL">
             Sine Law
         </div>
         <div class="wrapper">
@@ -92,7 +94,7 @@
             </a>
         </div>
 
-        <div class="title">
+        <div class="title" id = "HF">
             Hero's Formula
         </div>
         <div class="wrapper">
@@ -104,7 +106,7 @@
             </a>
         </div>
 
-        <div class="title">
+        <div class="title" id = "TF">
             Trig Formula
         </div>
         <div class="wrapper">
