--- a/public/Geometry.html
+++ b/public/Geometry.html
@@ -12,7 +12,7 @@
     <nav>
         <div>
             <a href="./index.html"> HOME </a>
-            <a> ABOUT </a>
+            <a href="about.html"> ABOUT </a>
             <a href="./linear_relations.html"> UNIT 1 </a>
             <a href="./Statistics.html"> UNIT 2 </a>
             <a href="Geometry.html"> UNIT 3 </a>
@@ -30,23 +30,27 @@
         <div class="content">
 
         <div class="text-wrapper">
-            <h2>Unit number 3:</h2>
             <h1> Analytic Geometry </h1>
+        </div>
+        <div class="text-wrapper">
+            <h3>Quick links to topics</h3>
         </div>
 
         <div class="link-wrapper">
-            <h3> QUICK LINKS TO TOPICS </h3>
             <a href="#D">Distance</a> <br>
             <a href="#MAE">Midpoint and Endpoint</a> <br>
             <a href="#POD">Point of Division</a> <br>
         </div>
          
         <div class="wrapper">
-            <a class="box-link"href="#lessons">
-                Topic List
+            <a class="box-linkTP"href="#D">
+                <p>TOPIC</p>
+                <p>LIST</p>
             </a>
             <a class="box-linkNF"href="https://static1.squarespace.com/static/58dc5121ebbd1af18052424a/t/58f4eaa1d1758e2a7af1bd3c/1492445859562/CST+4+Notes+-+Analytic.pdf" target="_blank">
-                Notes & Formulas
+                <p>NOTES</p>
+                <p>&</p>
+                <p>FORMULAS</p>
             </a>
             <a class="box-linkE"href="https://static1.squarespace.com/static/58dc5121ebbd1af18052424a/t/58f4eac5bf629ab1b430faf3/1492445896274/Workbook+-+ANALYTIC.pdf" target="_blank">
                 Exercise
@@ -60,11 +64,14 @@
             Distance
         </div>
         <div class="wrapper">
-            <a class="box-link" href="https://www.youtube.com/watch?v=TMBU1eUp5P4&list=PL8huMKDf0j8ojdyGXcfTub2oN31-25hN4" target="_blank">
-                Video Lesson
+            <a class="box-linkVL" href="https://www.youtube.com/watch?v=TMBU1eUp5P4&list=PL8huMKDf0j8ojdyGXcfTub2oN31-25hN4" target="_blank">
+                <P>VIDEO</P>
+                <p>LESSON</p>
             </a>
-            <a class="box-link" href="https://static1.squarespace.com/static/58dc5121ebbd1af18052424a/t/58f4ede315d5db5e25313c5f/1492446697458/DISTANCE+FORMULA+PRACTICE+PROBLEMS.pdf" target="_blank">
-                Practice Problems and Answers
+            <a class="box-linkPPAA" href="https://static1.squarespace.com/static/58dc5121ebbd1af18052424a/t/58f4ede315d5db5e25313c5f/1492446697458/DISTANCE+FORMULA+PRACTICE+PROBLEMS.pdf" target="_blank">
+                <p>Practice Problems</p> 
+                <p>and</p>
+                <p>Answers</p>
             </a>
         </div>
 
@@ -72,11 +79,14 @@
             Midpoint and Endpoint
         </div>
         <div class="wrapper">
-            <a class="box-link" href="https://www.youtube.com/watch?v=2Y2UninbAi0&list=PL8huMKDf0j8qfcIua7jHic63Q4Hu6089U" target="_blank">
-                Video Lesson
+            <a class="box-linkVL" href="https://www.youtube.com/watch?v=2Y2UninbAi0&list=PL8huMKDf0j8qfcIua7jHic63Q4Hu6089U" target="_blank">
+                <P>VIDEO</P>
+                <p>LESSON</p>
             </a>
-            <a class="box-link" href="https://static1.squarespace.com/static/58dc5121ebbd1af18052424a/t/58f4ee2cebbd1ab4b951f08f/1492446766789/MIDPOINT+AND+ENDPOINT+FORMULA+PRACTICE+PROBLEMS.pdf" target="_blank">
-                Practice Problems and Answers
+            <a class="box-linkPPAA" href="https://static1.squarespace.com/static/58dc5121ebbd1af18052424a/t/58f4ee2cebbd1ab4b951f08f/1492446766789/MIDPOINT+AND+ENDPOINT+FORMULA+PRACTICE+PROBLEMS.pdf" target="_blank">
+                <p>Practice Problems</p> 
+                <p>and</p>
+                <p>Answers</p>
             </a>
         </div>
 
@@ -84,11 +94,14 @@
             Point of Division
         </div>
         <div class="wrapper">
-            <a class="box-link" href="https://www.youtube.com/watch?v=A4v5HZlq2r8&list=PL8huMKDf0j8o0rvvUrfksQC1XEhAT8DeS" target="_blank">
-                Video Lesson
+            <a class="box-linkVL" href="https://www.youtube.com/watch?v=A4v5HZlq2r8&list=PL8huMKDf0j8o0rvvUrfksQC1XEhAT8DeS" target="_blank">
+                <P>VIDEO</P>
+                <p>LESSON</p>
             </a>
-            <a class="box-link" href="https://static1.squarespace.com/static/58dc5121ebbd1af18052424a/t/58f4ee6a197aead385bc5fcb/1492446829416/POINT+OF+DIVISION+PRACTICE+PROBLEMS.pdf" target="_blank">
-                Practice Problems and Answers
+            <a class="box-linkPPAA" href="https://static1.squarespace.com/static/58dc5121ebbd1af18052424a/t/58f4ee6a197aead385bc5fcb/1492446829416/POINT+OF+DIVISION+PRACTICE+PROBLEMS.pdf" target="_blank">
+                <p>Practice Problems</p> 
+                <p>and</p>
+                <p>Answers</p>
             </a>
         </div>
 
