--- a/public/Sign-in.html
+++ b/public/Sign-in.html
@@ -7,20 +7,20 @@
 <body>
   <div class="container">
     <div class="form-container">
-      <h1> XYZ Mastery </h1>
+      <h1> XYZ <span class="m"> M</span><span class="a">a</span><span class="s">s</span><span class="t">t</span><span class="e">e</span><span class="r">r</span><span class="y">y</span></p></h1>
       <h2>Login</h2>
       <form id="login-form">
         <input type="text" id="login-email" placeholder="Username" required>
         <input type="password" id="login-password" placeholder="Password" required>
         <button type="submit" id="login-button">Login</button>
         <div class="wrapper">
-          <p> or </p>
+          <h3> or </h3>
         </div>
         <button class="white" type="submit" id="google-button">
           Continue with Google
         </button>
         <div class="wrapper">
-          <p>Don't have an account?</p>
+          <h4>Don't have an account?</h4>
           <a href="Sign-up.html">Sign up</a>
         </div>
       </form>
@@ -33,6 +33,5 @@
   <script src="./Firebase.js"></script>
   <script type = 'module' src="./Login.js"></script>
   <script src="./google-login.js"></script>
-
 </body>
 </html>
