--- a/public/Statistics.html
+++ b/public/Statistics.html
@@ -12,7 +12,7 @@
     <nav>
         <div>
             <a href="./index.html"> HOME </a>
-            <a> ABOUT </a>
+            <a href="about.html"> ABOUT </a>
             <a href="./linear_relations.html"> UNIT 1 </a>
             <a href="./Statistics.html"> UNIT 2 </a>
             <a href="Geometry.html"> UNIT 3 </a>
@@ -30,12 +30,14 @@
         <div class="content">
   
         <div class="text-wrapper">
-            <h2>Unit number 2:</h2>
             <h1> Statistics </h1>
         </div>
 
+        <div class="text-wrapper">
+            <h3>Quick links to topics</h3>
+        </div>
+
         <div class="link-wrapper">
-            <h3> QUICK LINKS TO TOPICS </h3>
             <a href="#MMMR">Mean, Median, Mode, Range</a> <br>
             <a href="#MD">Mean Deviation</a> <br>
             <a href="#P">Percentile</a> <br>
@@ -47,11 +49,14 @@
         </div>
 
         <div class="wrapper">
-            <a class="box-link"href="#lessons">
-                Topic List
+            <a class="box-linkTP"href="#MMMR">
+                <p>TOPIC</p>
+                <p>LIST</p>
             </a>
             <a class="box-linkNF"href="https://static1.squarespace.com/static/58dc5121ebbd1af18052424a/t/58f53dc929687f0a600803ab/1492467149716/CST+4+Notes+-+Stats.pdf" target="_blank">
-                Notes & Formulas
+                <p>NOTES</p>
+                <p>&</p>
+                <p>FORMULAS</p>
             </a>
             <a class="box-linkE"href="https://static1.squarespace.com/static/58dc5121ebbd1af18052424a/t/58f53deb6b8f5be6d65d5c0b/1492467180860/Workbook+-+STATS.pdf" target="_blank">
                 Exercise
@@ -65,11 +70,14 @@
             Mean, Median, Mode, Range
         </div>
         <div class="wrapper">
-            <a class="box-link" href="https://www.youtube.com/watch?v=XEZgmu7R_hA&list=PL8huMKDf0j8qiLdk8wATVykYNNYyUbLp7" target="_blank">
-                Video Lesson
+            <a class="box-linkVL" href="https://www.youtube.com/watch?v=XEZgmu7R_hA&list=PL8huMKDf0j8qiLdk8wATVykYNNYyUbLp7" target="_blank">
+                <P>VIDEO</P>
+                <p>LESSON</p>
             </a>
-            <a class="box-link" href="https://static1.squarespace.com/static/58dc5121ebbd1af18052424a/t/58f5432c20099e51a3c0644e/1492468530580/MEAN+MEDIAN+MODE+RANGE+PRACTICE+PROBLEMS.pdf" target="_blank">
-                Practice Problems and Answers
+            <a class="box-linkPPAA" href="https://static1.squarespace.com/static/58dc5121ebbd1af18052424a/t/58f5432c20099e51a3c0644e/1492468530580/MEAN+MEDIAN+MODE+RANGE+PRACTICE+PROBLEMS.pdf" target="_blank">
+                <p>Practice Problems</p> 
+                <p>and</p>
+                <p>Answers</p>
             </a>
         </div>
 
@@ -77,11 +85,14 @@
             Mean Deviation
         </div>
         <div class="wrapper">
-            <a class="box-link" href="https://www.youtube.com/watch?v=DOF-BvIThg0&list=PL8huMKDf0j8qISk2iw7_8gAEsUjgVTDkJ" target="_blank">
-                Video Lesson
+            <a class="box-linkVL" href="https://www.youtube.com/watch?v=DOF-BvIThg0&list=PL8huMKDf0j8qISk2iw7_8gAEsUjgVTDkJ" target="_blank">
+                <P>VIDEO</P>
+                <p>LESSON</p>
             </a>
-            <a class="box-link" href="https://static1.squarespace.com/static/58dc5121ebbd1af18052424a/t/58f545ca1b631b3aa6288d15/1492469197345/MEAN+DEVIATION+PRACTICE+PROBLEMS.pdf" target="_blank">
-                Practice Problems and Answers
+            <a class="box-linkPPAA" href="https://static1.squarespace.com/static/58dc5121ebbd1af18052424a/t/58f545ca1b631b3aa6288d15/1492469197345/MEAN+DEVIATION+PRACTICE+PROBLEMS.pdf" target="_blank">
+                <p>Practice Problems</p> 
+                <p>and</p>
+                <p>Answers</p>
             </a>
         </div>
         
@@ -89,11 +100,14 @@
             Percentile
         </div>
         <div class="wrapper">
-            <a class="box-link" href="https://www.youtube.com/watch?v=vdAJNbsbfEc&list=PL8huMKDf0j8puIDWe9ni26uosTnqON7RI" target="_blank">
-                Video Lesson
+            <a class="box-linkVL" href="https://www.youtube.com/watch?v=vdAJNbsbfEc&list=PL8huMKDf0j8puIDWe9ni26uosTnqON7RI" target="_blank">
+                <P>VIDEO</P>
+                <p>LESSON</p>
             </a>
-            <a class="box-link" href="https://static1.squarespace.com/static/58dc5121ebbd1af18052424a/t/58f546d31b631b3aa6289e91/1492469463872/PERCENTILE+PRACTICE+PROBLEMS.pdf" target="_blank">
-                Practice Problems and Answers
+            <a class="box-linkPPAA" href="https://static1.squarespace.com/static/58dc5121ebbd1af18052424a/t/58f546d31b631b3aa6289e91/1492469463872/PERCENTILE+PRACTICE+PROBLEMS.pdf" target="_blank">
+                <p>Practice Problems</p> 
+                <p>and</p>
+                <p>Answers</p>
             </a>
         </div>
 
@@ -101,11 +115,14 @@
             Percentile Backwards
         </div>
         <div class="wrapper">
-            <a class="box-link" href="https://www.youtube.com/watch?v=RogKZUjbDOw&list=PL8huMKDf0j8p1VCj8ftscNeO1mANEV1ke">
-                Video Lesson
+            <a class="box-linkVL" href="https://www.youtube.com/watch?v=RogKZUjbDOw&list=PL8huMKDf0j8p1VCj8ftscNeO1mANEV1ke">
+                <P>VIDEO</P>
+                <p>LESSON</p>
             </a>
-            <a class="box-link" href="https://static1.squarespace.com/static/58dc5121ebbd1af18052424a/t/58f5482aff7c50c3859c39f2/1492469806393/PERCENTILE+BACKWARDS+PRACTICE+PROBLEMS.pdf" target="_blank">
-                Practice Problems and Answers
+            <a class="box-linkPPAA" href="https://static1.squarespace.com/static/58dc5121ebbd1af18052424a/t/58f5482aff7c50c3859c39f2/1492469806393/PERCENTILE+BACKWARDS+PRACTICE+PROBLEMS.pdf" target="_blank">
+                <p>Practice Problems</p> 
+                <p>and</p>
+                <p>Answers</p>
             </a>
         </div>
 
@@ -113,11 +130,14 @@
             Correlation - Interpret Graph
         </div>
         <div class="wrapper">
-            <a class="box-link" href="https://www.youtube.com/watch?v=306wUqT5tCM&list=PL8huMKDf0j8piXuvXNxO11NgeSqeri9ns" target="_blank">
-                Video Lesson
+            <a class="box-linkVL" href="https://www.youtube.com/watch?v=306wUqT5tCM&list=PL8huMKDf0j8piXuvXNxO11NgeSqeri9ns" target="_blank">
+                <P>VIDEO</P>
+                <p>LESSON</p>
             </a>
-            <a class="box-link" href="https://static1.squarespace.com/static/58dc5121ebbd1af18052424a/t/58f549235016e1ad80a67682/1492470053091/CORRELATION+GRAPH+PRACTICE+PROBLEMS.pdf" target="_blank">
-                Practice Problems and Answers
+            <a class="box-linkPPAA" href="https://static1.squarespace.com/static/58dc5121ebbd1af18052424a/t/58f549235016e1ad80a67682/1492470053091/CORRELATION+GRAPH+PRACTICE+PROBLEMS.pdf" target="_blank">
+                <p>Practice Problems</p> 
+                <p>and</p>
+                <p>Answers</p>
             </a>
         </div>
 
@@ -125,11 +145,14 @@
             Correlation - Interpret Numeric
         </div>
         <div class="wrapper">
-            <a class="box-link" href="https://www.youtube.com/watch?v=LBm-zfmE-aU&list=PL8huMKDf0j8oTtqQoIUPitfQZlj2sftMU" target="_blank">
-                Video Lesson
+            <a class="box-linkVL" href="https://www.youtube.com/watch?v=LBm-zfmE-aU&list=PL8huMKDf0j8oTtqQoIUPitfQZlj2sftMU" target="_blank">
+                <P>VIDEO</P>
+                <p>LESSON</p>
             </a>
-            <a class="box-link" href="https://static1.squarespace.com/static/58dc5121ebbd1af18052424a/t/58f54a2fb3db2bc438124ff8/1492470321690/CORRELATION+NUMERIC+PRACTICE+PROBLEMS.pdf" target="_blank">
-                Practice Problems and Answers
+            <a class="box-linkPPAA" href="https://static1.squarespace.com/static/58dc5121ebbd1af18052424a/t/58f54a2fb3db2bc438124ff8/1492470321690/CORRELATION+NUMERIC+PRACTICE+PROBLEMS.pdf" target="_blank">
+                <p>Practice Problems</p> 
+                <p>and</p>
+                <p>Answers</p>
             </a>
         </div>
 
@@ -137,11 +160,14 @@
             Calculate (estimate) Correlation
         </div>
         <div class="wrapper">
-            <a class="box-link" href="https://www.youtube.com/watch?v=Z6dnh93VBnE&list=PL8huMKDf0j8rYn6Z4SigRHHcmI_ODhtfK" target="_blank">
-                Video Lesson
+            <a class="box-linkVL" href="https://www.youtube.com/watch?v=Z6dnh93VBnE&list=PL8huMKDf0j8rYn6Z4SigRHHcmI_ODhtfK" target="_blank">
+                <P>VIDEO</P>
+                <p>LESSON</p>
             </a>
-            <a class="box-link" href="https://static1.squarespace.com/static/58dc5121ebbd1af18052424a/t/58f54ab4ff7c50c3859c6507/1492470454953/CALCULATE+CORRELATION+COEFFICIENT+PRACTICE+PROBLEMS.pdf" target="_blank">
-                Practice Problems and Answers
+            <a class="box-linkPPAA" href="https://static1.squarespace.com/static/58dc5121ebbd1af18052424a/t/58f54ab4ff7c50c3859c6507/1492470454953/CALCULATE+CORRELATION+COEFFICIENT+PRACTICE+PROBLEMS.pdf" target="_blank">
+                <p>Practice Problems</p> 
+                <p>and</p>
+                <p>Answers</p>
             </a>
         </div>
 
@@ -149,11 +175,14 @@
             Meyer Line Method
         </div>
         <div class="wrapper">
-            <a class="box-link" href="https://www.youtube.com/watch?v=XWO72tyBrq0&list=PL8huMKDf0j8qEraU8FVYCq5PB1Bguqv-g" target="_blank">
-                Video Lesson
+            <a class="box-linkVL" href="https://www.youtube.com/watch?v=XWO72tyBrq0&list=PL8huMKDf0j8qEraU8FVYCq5PB1Bguqv-g" target="_blank">
+                <P>VIDEO</P>
+                <p>LESSON</p>
             </a>
-            <a class="box-link" href="https://static1.squarespace.com/static/58dc5121ebbd1af18052424a/t/58f54fb42e69cfda050f0ebe/1492471739230/CORRELATION+MEYER+LINE+PRACTICE+PROBLEMS.pdf" target="_blank">
-                Practice Problems and Answers
+            <a class="box-linkPPAA" href="https://static1.squarespace.com/static/58dc5121ebbd1af18052424a/t/58f54fb42e69cfda050f0ebe/1492471739230/CORRELATION+MEYER+LINE+PRACTICE+PROBLEMS.pdf" target="_blank">
+                <p>Practice Problems</p> 
+                <p>and</p>
+                <p>Answers</p>
             </a>
         </div>
 
