--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,7 @@
     <nav>
         <div>
             <a href="./index.html"> HOME </a>
-            <a> ABOUT </a>
+            <a href="about.html"> ABOUT </a>
             <a href="./linear_relations.html"> UNIT 1 </a>
             <a href="./Statistics.html"> UNIT 2 </a>
             <a href="Geometry.html"> UNIT 3 </a>
