--- a/public/Sign-up.html
+++ b/public/Sign-up.html
@@ -9,7 +9,7 @@
 <body>
     <div class="container">
         <div class="form-container">
-          <h1> XYZ Mastery </h1>
+          <h1> XYZ <span class="m"> M</span><span class="a">a</span><span class="s">s</span><span class="t">t</span><span class="e">e</span><span class="r">r</span><span class="y">y</span></p></h1>
             <h2>Signup</h2>
             <form id="signup-form">
               <input type="text" id="signup-name" placeholder="Username" required>
@@ -17,13 +17,13 @@
               <input type="password" id="signup-password" placeholder="Password" required>
               <button type="submit"id = 'sign-up-button'>Signup</button>
               <div class="wrapper">
-                <p> or </p>
+                <h3> or </h3>
               </div>
               <button class="white" type="submit" id="google-button">
                 Continue with Google
               </button>
               <div class="wrapper">
-                <p>Already have an account?</p>
+                <h4>Already have an account?</h4>
                 <a href="Sign-in.html">Sign in</a>
             </div>
             </form>
