--- a/public/Trigonometry.html
+++ b/public/Trigonometry.html
@@ -12,7 +12,7 @@
     <nav>
         <div>
             <a href="./index.html"> HOME </a>
-            <a> ABOUT </a>
+            <a href="about.html"> ABOUT </a>
             <a href="./linear_relations.html"> UNIT 1 </a>
             <a href="./Statistics.html"> UNIT 2 </a>
             <a href="Geometry.html"> UNIT 3 </a>
@@ -30,12 +30,13 @@
         <div class="content">
 
         <div class="text-wrapper">
-            <h2>Unit number 4:</h2>
             <h1> Trigonometry </h1>
+        </div>
+        <div class="text-wrapper">
+            <h3>Quick links to topics</h3>
         </div>
 
         <div class="link-wrapper">
-            <h3> QUICK LINKS TO TOPICS </h3>
             <a href="#P">Pythagoras</a> <br>
             <a href="#SCT">Soh Cah Toa</a> <br>
             <a href="#SL">Sine Law</a> <br>
@@ -44,11 +45,14 @@
         </div>
 
         <div class="wrapper">
-            <a class="box-link"href="#lessons">
-                Topic List
+            <a class="box-linkTP"href="#P">
+                <p>TOPIC</p>
+                <p>LIST</p>
             </a>
             <a class="box-linkNF"href="https://static1.squarespace.com/static/58dc5121ebbd1af18052424a/t/58f4be7cf7e0ab2b0efe7267/1492434565198/CST+4+Notes+-+Trig.pdf" target="_blank">
-                Notes & Formulas
+                <p>NOTES</p>
+                <p>&</p>
+                <p>FORMULAS</p>
             </a>
             <a class="box-linkE"href="https://static1.squarespace.com/static/58dc5121ebbd1af18052424a/t/58f4c38ae58c62bb162b553f/1492435854788/Workbook+-+TRIG.pdf" target="_blank">
                 Exercise
@@ -62,11 +66,14 @@
             Pythagoras
         </div>
         <div class="wrapper">
-            <a class="box-link" href="https://www.youtube.com/watch?v=lGlM2uLxAWA&list=PL8huMKDf0j8odVRQ0fEkcvmnLpqFU71PU" target="_blank">
-                Video Lesson
+            <a class="box-linkVL" href="https://www.youtube.com/watch?v=lGlM2uLxAWA&list=PL8huMKDf0j8odVRQ0fEkcvmnLpqFU71PU" target="_blank">
+                <P>VIDEO</P>
+                <p>LESSON</p>
             </a>
-            <a class="box-link" href="https://static1.squarespace.com/static/58dc5121ebbd1af18052424a/t/58f4de37f5e231caaec99a99/1492442680565/PYTHAGORAS+PRACTICE+PROBLEMS.pdf" target="_blank">
-                Practice Problems and Answers
+            <a class="box-linkPPAA" href="https://static1.squarespace.com/static/58dc5121ebbd1af18052424a/t/58f4de37f5e231caaec99a99/1492442680565/PYTHAGORAS+PRACTICE+PROBLEMS.pdf" target="_blank">
+                <p>Practice Problems</p> 
+                <p>and</p>
+                <p>Answers</p>
             </a>
         </div>
 
@@ -74,11 +81,14 @@
             Soh Cah Toa
         </div>
         <div class="wrapper">
-            <a class="box-link" href="https://www.youtube.com/watch?v=SSCdiddA_A4&list=PL8huMKDf0j8qWrE0z0BJJKgQ7pLRK49FC" target="_blank">
-                Video Lesson
+            <a class="box-linkVL" href="https://www.youtube.com/watch?v=SSCdiddA_A4&list=PL8huMKDf0j8qWrE0z0BJJKgQ7pLRK49FC" target="_blank">
+                <P>VIDEO</P>
+                <p>LESSON</p>
             </a>
-            <a class="box-link" href="https://static1.squarespace.com/static/58dc5121ebbd1af18052424a/t/58f4de4d725e2511d877b5d9/1492442702390/SOH+CAH+TOA+PRACTICE+PROBLEMS.pdf" target="_blank">
-                Practice Problems and Answers
+            <a class="box-linkPPAA" href="https://static1.squarespace.com/static/58dc5121ebbd1af18052424a/t/58f4de4d725e2511d877b5d9/1492442702390/SOH+CAH+TOA+PRACTICE+PROBLEMS.pdf" target="_blank">
+                <p>Practice Problems</p> 
+                <p>and</p>
+                <p>Answers</p>
             </a>
         </div>
 
@@ -86,11 +96,14 @@
             Sine Law
         </div>
         <div class="wrapper">
-            <a class="box-link" href="https://www.youtube.com/watch?v=eliI8iCF6W8&list=PL8huMKDf0j8omfbPBKB6dwsMwOV9ZDqCK" target="_blank">
-                Video Lesson
+            <a class="box-linkVL" href="https://www.youtube.com/watch?v=eliI8iCF6W8&list=PL8huMKDf0j8omfbPBKB6dwsMwOV9ZDqCK" target="_blank">
+                <P>VIDEO</P>
+                <p>LESSON</p>
             </a>
-            <a class="box-link" href="https://static1.squarespace.com/static/58dc5121ebbd1af18052424a/t/58f4de673a041105c363891a/1492442728902/SINE+LAW+PRACTICE+PROBLEMS.pdf" target="_blank">
-                Practice Problems and Answers
+            <a class="box-linkPPAA" href="https://static1.squarespace.com/static/58dc5121ebbd1af18052424a/t/58f4de673a041105c363891a/1492442728902/SINE+LAW+PRACTICE+PROBLEMS.pdf" target="_blank">
+                <p>Practice Problems</p> 
+                <p>and</p>
+                <p>Answers</p>
             </a>
         </div>
 
@@ -98,11 +111,14 @@
             Hero's Formula
         </div>
         <div class="wrapper">
-            <a class="box-link" href="https://www.youtube.com/watch?v=S2latZsIRzM&list=PL8huMKDf0j8phR4aUWYJ9yhB2hXsWT0yw" target="_blank">
-                Video Lesson
+            <a class="box-linkVL" href="https://www.youtube.com/watch?v=S2latZsIRzM&list=PL8huMKDf0j8phR4aUWYJ9yhB2hXsWT0yw" target="_blank">
+                <P>VIDEO</P>
+                <p>LESSON</p>
             </a>
-            <a class="box-link" href="https://static1.squarespace.com/static/58dc5121ebbd1af18052424a/t/58f4de7f20099e782fd49aac/1492442751767/HERO%27S+FORMULA+PRACTICE+PROBLEMS.pdf" target="_blank">
-                Practice Problems and Answers
+            <a class="box-linkPPAA" href="https://static1.squarespace.com/static/58dc5121ebbd1af18052424a/t/58f4de7f20099e782fd49aac/1492442751767/HERO%27S+FORMULA+PRACTICE+PROBLEMS.pdf" target="_blank">
+                <p>Practice Problems</p> 
+                <p>and</p>
+                <p>Answers</p>
             </a>
         </div>
 
@@ -110,11 +126,14 @@
             Trig Formula
         </div>
         <div class="wrapper">
-            <a class="box-link" href="https://www.youtube.com/watch?v=cxUaiPWFXdI&list=PL8huMKDf0j8rEuFs8Dk6CQG9rUEDRB2YE" target="_blank">
-                Video Lesson
+            <a class="box-linkVL" href="https://www.youtube.com/watch?v=cxUaiPWFXdI&list=PL8huMKDf0j8rEuFs8Dk6CQG9rUEDRB2YE" target="_blank">
+                <P>VIDEO</P>
+                <p>LESSON</p>
             </a>
-            <a class="box-link" href="https://static1.squarespace.com/static/58dc5121ebbd1af18052424a/t/58f4de95b3db2bd6d3a71887/1492442774762/SAS_2+%28PINCH%29+AREA+PRACTICE+PROBLEMS.pdf" target="_blank">
-                Practice Problems and Answers
+            <a class="box-linkPPAA" href="https://static1.squarespace.com/static/58dc5121ebbd1af18052424a/t/58f4de95b3db2bd6d3a71887/1492442774762/SAS_2+%28PINCH%29+AREA+PRACTICE+PROBLEMS.pdf" target="_blank">
+                <p>Practice Problems</p> 
+                <p>and</p>
+                <p>Answers</p>
             </a>
         </div>
 
