--- a/public/Geometry.html
+++ b/public/Geometry.html
@@ -65,8 +65,8 @@
         </div>
         <div class="wrapper">
             <a class="box-linkVL" href="https://www.youtube.com/watch?v=TMBU1eUp5P4&list=PL8huMKDf0j8ojdyGXcfTub2oN31-25hN4" target="_blank">
-                <P>VIDEO</P>
-                <p>LESSON</p>
+                <P>Video</P>
+                <p>Lesson</p>
             </a>
             <a class="box-linkPPAA" href="https://static1.squarespace.com/static/58dc5121ebbd1af18052424a/t/58f4ede315d5db5e25313c5f/1492446697458/DISTANCE+FORMULA+PRACTICE+PROBLEMS.pdf" target="_blank">
                 <p>Practice Problems</p> 
@@ -80,8 +80,8 @@
         </div>
         <div class="wrapper">
             <a class="box-linkVL" href="https://www.youtube.com/watch?v=2Y2UninbAi0&list=PL8huMKDf0j8qfcIua7jHic63Q4Hu6089U" target="_blank">
-                <P>VIDEO</P>
-                <p>LESSON</p>
+                <P>Video</P>
+                <p>Lesson</p>
             </a>
             <a class="box-linkPPAA" href="https://static1.squarespace.com/static/58dc5121ebbd1af18052424a/t/58f4ee2cebbd1ab4b951f08f/1492446766789/MIDPOINT+AND+ENDPOINT+FORMULA+PRACTICE+PROBLEMS.pdf" target="_blank">
                 <p>Practice Problems</p> 
@@ -95,8 +95,8 @@
         </div>
         <div class="wrapper">
             <a class="box-linkVL" href="https://www.youtube.com/watch?v=A4v5HZlq2r8&list=PL8huMKDf0j8o0rvvUrfksQC1XEhAT8DeS" target="_blank">
-                <P>VIDEO</P>
-                <p>LESSON</p>
+                <P>Video</P>
+                <p>Lesson</p>
             </a>
             <a class="box-linkPPAA" href="https://static1.squarespace.com/static/58dc5121ebbd1af18052424a/t/58f4ee6a197aead385bc5fcb/1492446829416/POINT+OF+DIVISION+PRACTICE+PROBLEMS.pdf" target="_blank">
                 <p>Practice Problems</p> 
