--- a/public/Statistics.html
+++ b/public/Statistics.html
@@ -71,8 +71,8 @@
         </div>
         <div class="wrapper">
             <a class="box-linkVL" href="https://www.youtube.com/watch?v=XEZgmu7R_hA&list=PL8huMKDf0j8qiLdk8wATVykYNNYyUbLp7" target="_blank">
-                <P>VIDEO</P>
-                <p>LESSON</p>
+                <P>Video</P>
+                <p>Lesson</p>
             </a>
             <a class="box-linkPPAA" href="https://static1.squarespace.com/static/58dc5121ebbd1af18052424a/t/58f5432c20099e51a3c0644e/1492468530580/MEAN+MEDIAN+MODE+RANGE+PRACTICE+PROBLEMS.pdf" target="_blank">
                 <p>Practice Problems</p> 
@@ -86,8 +86,8 @@
         </div>
         <div class="wrapper">
             <a class="box-linkVL" href="https://www.youtube.com/watch?v=DOF-BvIThg0&list=PL8huMKDf0j8qISk2iw7_8gAEsUjgVTDkJ" target="_blank">
-                <P>VIDEO</P>
-                <p>LESSON</p>
+                <P>Video</P>
+                <p>Lesson</p>
             </a>
             <a class="box-linkPPAA" href="https://static1.squarespace.com/static/58dc5121ebbd1af18052424a/t/58f545ca1b631b3aa6288d15/1492469197345/MEAN+DEVIATION+PRACTICE+PROBLEMS.pdf" target="_blank">
                 <p>Practice Problems</p> 
@@ -101,8 +101,8 @@
         </div>
         <div class="wrapper">
             <a class="box-linkVL" href="https://www.youtube.com/watch?v=vdAJNbsbfEc&list=PL8huMKDf0j8puIDWe9ni26uosTnqON7RI" target="_blank">
-                <P>VIDEO</P>
-                <p>LESSON</p>
+                <P>Video</P>
+                <p>Lesson</p>
             </a>
             <a class="box-linkPPAA" href="https://static1.squarespace.com/static/58dc5121ebbd1af18052424a/t/58f546d31b631b3aa6289e91/1492469463872/PERCENTILE+PRACTICE+PROBLEMS.pdf" target="_blank">
                 <p>Practice Problems</p> 
@@ -116,8 +116,8 @@
         </div>
         <div class="wrapper">
             <a class="box-linkVL" href="https://www.youtube.com/watch?v=RogKZUjbDOw&list=PL8huMKDf0j8p1VCj8ftscNeO1mANEV1ke">
-                <P>VIDEO</P>
-                <p>LESSON</p>
+                <P>Video</P>
+                <p>Lesson</p>
             </a>
             <a class="box-linkPPAA" href="https://static1.squarespace.com/static/58dc5121ebbd1af18052424a/t/58f5482aff7c50c3859c39f2/1492469806393/PERCENTILE+BACKWARDS+PRACTICE+PROBLEMS.pdf" target="_blank">
                 <p>Practice Problems</p> 
@@ -131,8 +131,8 @@
         </div>
         <div class="wrapper">
             <a class="box-linkVL" href="https://www.youtube.com/watch?v=306wUqT5tCM&list=PL8huMKDf0j8piXuvXNxO11NgeSqeri9ns" target="_blank">
-                <P>VIDEO</P>
-                <p>LESSON</p>
+                <P>Video</P>
+                <p>Lesson</p>
             </a>
             <a class="box-linkPPAA" href="https://static1.squarespace.com/static/58dc5121ebbd1af18052424a/t/58f549235016e1ad80a67682/1492470053091/CORRELATION+GRAPH+PRACTICE+PROBLEMS.pdf" target="_blank">
                 <p>Practice Problems</p> 
@@ -146,8 +146,8 @@
         </div>
         <div class="wrapper">
             <a class="box-linkVL" href="https://www.youtube.com/watch?v=LBm-zfmE-aU&list=PL8huMKDf0j8oTtqQoIUPitfQZlj2sftMU" target="_blank">
-                <P>VIDEO</P>
-                <p>LESSON</p>
+                <P>Video</P>
+                <p>Lesson</p>
             </a>
             <a class="box-linkPPAA" href="https://static1.squarespace.com/static/58dc5121ebbd1af18052424a/t/58f54a2fb3db2bc438124ff8/1492470321690/CORRELATION+NUMERIC+PRACTICE+PROBLEMS.pdf" target="_blank">
                 <p>Practice Problems</p> 
@@ -161,8 +161,8 @@
         </div>
         <div class="wrapper">
             <a class="box-linkVL" href="https://www.youtube.com/watch?v=Z6dnh93VBnE&list=PL8huMKDf0j8rYn6Z4SigRHHcmI_ODhtfK" target="_blank">
-                <P>VIDEO</P>
-                <p>LESSON</p>
+                <P>Video</P>
+                <p>Lesson</p>
             </a>
             <a class="box-linkPPAA" href="https://static1.squarespace.com/static/58dc5121ebbd1af18052424a/t/58f54ab4ff7c50c3859c6507/1492470454953/CALCULATE+CORRELATION+COEFFICIENT+PRACTICE+PROBLEMS.pdf" target="_blank">
                 <p>Practice Problems</p> 
@@ -176,8 +176,8 @@
         </div>
         <div class="wrapper">
             <a class="box-linkVL" href="https://www.youtube.com/watch?v=XWO72tyBrq0&list=PL8huMKDf0j8qEraU8FVYCq5PB1Bguqv-g" target="_blank">
-                <P>VIDEO</P>
-                <p>LESSON</p>
+                <P>Video</P>
+                <p>Lesson</p>
             </a>
             <a class="box-linkPPAA" href="https://static1.squarespace.com/static/58dc5121ebbd1af18052424a/t/58f54fb42e69cfda050f0ebe/1492471739230/CORRELATION+MEYER+LINE+PRACTICE+PROBLEMS.pdf" target="_blank">
                 <p>Practice Problems</p> 
