--- a/public/Trigonometry.html
+++ b/public/Trigonometry.html
@@ -67,8 +67,8 @@
         </div>
         <div class="wrapper">
             <a class="box-linkVL" href="https://www.youtube.com/watch?v=lGlM2uLxAWA&list=PL8huMKDf0j8odVRQ0fEkcvmnLpqFU71PU" target="_blank">
-                <P>VIDEO</P>
-                <p>LESSON</p>
+                <P>Video</P>
+                <p>Lesson</p>
             </a>
             <a class="box-linkPPAA" href="https://static1.squarespace.com/static/58dc5121ebbd1af18052424a/t/58f4de37f5e231caaec99a99/1492442680565/PYTHAGORAS+PRACTICE+PROBLEMS.pdf" target="_blank">
                 <p>Practice Problems</p> 
@@ -82,8 +82,8 @@
         </div>
         <div class="wrapper">
             <a class="box-linkVL" href="https://www.youtube.com/watch?v=SSCdiddA_A4&list=PL8huMKDf0j8qWrE0z0BJJKgQ7pLRK49FC" target="_blank">
-                <P>VIDEO</P>
-                <p>LESSON</p>
+                <P>Video</P>
+                <p>Lesson</p>
             </a>
             <a class="box-linkPPAA" href="https://static1.squarespace.com/static/58dc5121ebbd1af18052424a/t/58f4de4d725e2511d877b5d9/1492442702390/SOH+CAH+TOA+PRACTICE+PROBLEMS.pdf" target="_blank">
                 <p>Practice Problems</p> 
@@ -97,8 +97,8 @@
         </div>
         <div class="wrapper">
             <a class="box-linkVL" href="https://www.youtube.com/watch?v=eliI8iCF6W8&list=PL8huMKDf0j8omfbPBKB6dwsMwOV9ZDqCK" target="_blank">
-                <P>VIDEO</P>
-                <p>LESSON</p>
+                <P>Video</P>
+                <p>Lesson</p>
             </a>
             <a class="box-linkPPAA" href="https://static1.squarespace.com/static/58dc5121ebbd1af18052424a/t/58f4de673a041105c363891a/1492442728902/SINE+LAW+PRACTICE+PROBLEMS.pdf" target="_blank">
                 <p>Practice Problems</p> 
@@ -112,8 +112,8 @@
         </div>
         <div class="wrapper">
             <a class="box-linkVL" href="https://www.youtube.com/watch?v=S2latZsIRzM&list=PL8huMKDf0j8phR4aUWYJ9yhB2hXsWT0yw" target="_blank">
-                <P>VIDEO</P>
-                <p>LESSON</p>
+                <P>Video</P>
+                <p>Lesson</p>
             </a>
             <a class="box-linkPPAA" href="https://static1.squarespace.com/static/58dc5121ebbd1af18052424a/t/58f4de7f20099e782fd49aac/1492442751767/HERO%27S+FORMULA+PRACTICE+PROBLEMS.pdf" target="_blank">
                 <p>Practice Problems</p> 
@@ -127,8 +127,8 @@
         </div>
         <div class="wrapper">
             <a class="box-linkVL" href="https://www.youtube.com/watch?v=cxUaiPWFXdI&list=PL8huMKDf0j8rEuFs8Dk6CQG9rUEDRB2YE" target="_blank">
-                <P>VIDEO</P>
-                <p>LESSON</p>
+                <P>Video</P>
+                <p>Lesson</p>
             </a>
             <a class="box-linkPPAA" href="https://static1.squarespace.com/static/58dc5121ebbd1af18052424a/t/58f4de95b3db2bd6d3a71887/1492442774762/SAS_2+%28PINCH%29+AREA+PRACTICE+PROBLEMS.pdf" target="_blank">
                 <p>Practice Problems</p> 
