--- a/public/linear_relations.html
+++ b/public/linear_relations.html
@@ -72,8 +72,8 @@
             </div>
             <div class="wrapper">
                 <a class="box-linkVL" href="https://www.youtube.com/watch?v=TqVtv9a_OG8&list=PL8huMKDf0j8o6_0Nh-x9fy7GLhqPUNOrN" target="_blank">
-                    <P>VIDEO</P>
-                    <p>LESSON</p>
+                    <P>Video</P>
+                    <p>Lesson</p>
                 </a>
                 <a class="box-linkPPAA" href="https://static1.squarespace.com/static/58dc5121ebbd1af18052424a/t/58f55d391b631bc59d0d2986/1492475196373/POINTS+ON+THE+CARTESIAN+PLANE+PRACTICE+PROBLEMS.pdf" target="_blank">
                     <p>Practice Problems</p> 
@@ -87,8 +87,8 @@
             </div>
             <div class="wrapper">
                 <a class="box-linkVL"href="https://www.youtube.com/watch?v=1i1sMHpjHBE&list=PL8huMKDf0j8qE3d3_0FDkRUCDnO43aCr-" target="_blank">
-                    <P>VIDEO</P>
-                    <p>LESSON</p>
+                    <P>Video</P>
+                    <p>Lesson</p>
                 </a>
                 <a class="box-linkPPAA"href="https://static1.squarespace.com/static/58dc5121ebbd1af18052424a/t/58f55d75be6594319f59ca07/1492475254870/SLOPE+OF+A+LINE+PRACTICE+PROBLEMS.pdf" target="_blank">
                     <p>Practice Problems</p> 
@@ -102,8 +102,8 @@
             </div>
             <div class="wrapper">
                 <a class="box-linkVL"href="https://www.youtube.com/watch?v=vkTXDGpzy3U&list=PL8huMKDf0j8rh9JGGQRypO7j25p7EVz7l" target="_blank">
-                    <P>VIDEO</P>
-                    <p>LESSON</p>
+                    <P>Video</P>
+                    <p>Lesson</p>
                 </a>
                 <a class="box-linkPPAA"href="https://static1.squarespace.com/static/58dc5121ebbd1af18052424a/t/5a14699c0d92975367e18bab/1511287203758/EQUATION+OF+A+LINE+PRACTICE+PROBLEMS.pdf" target="_blank">
                     <p>Practice Problems</p> 
@@ -117,8 +117,8 @@
             </div>
             <div class="wrapper">
                 <a class="box-linkVL"href="https://www.youtube.com/watch?v=z9T_aP_GjOY&list=PL8huMKDf0j8o0zexqooQk7WDS160R6VKY" target="_blank">
-                    <P>VIDEO</P>
-                    <p>LESSON</p>
+                    <P>Video</P>
+                    <p>Lesson</p>
                 </a>
                 <a class="box-linkPPAA"href="https://static1.squarespace.com/static/58dc5121ebbd1af18052424a/t/58f55e2db8a79b4768c63193/1492475440528/EXCEPTIONS+IN+THE+EQUATION+OF+A+LINE+PRACTICE+PROBLEMS.pdf" target="_blank">
                     <p>Practice Problems</p> 
@@ -132,8 +132,8 @@
             </div>
             <div class="wrapper">
                 <a class="box-linkVL"href="https://www.youtube.com/watch?v=gKBVQJuWez4&list=PL8huMKDf0j8qL2niU7yZSHM1bLaBrQCI5" target="_blank">
-                    <P>VIDEO</P>
-                    <p>LESSON</p>
+                    <P>Video</P>
+                    <p>Lesson</p>
                 </a>
                 <a class="box-linkPPAA"href="https://static1.squarespace.com/static/58dc5121ebbd1af18052424a/t/58f55e9ed2b857170c99ef7e/1492475558121/X-+AND+Y-INTERCEPTS+PRACTICE+PROBLEMS.pdf" target="_blank">
                     <p>Practice Problems</p> 
@@ -147,8 +147,8 @@
             </div>
             <div class="wrapper">
                 <a class="box-linkVL"href="https://www.youtube.com/watch?v=Sk4_l7wtODk&list=PL8huMKDf0j8pILDbGnte0UjukzVk76knX" target="_blank">
-                    <P>VIDEO</P>
-                    <p>LESSON</p>
+                    <P>Video</P>
+                    <p>Lesson</p>
                 </a>
                 <a class="box-linkPPAA"href="https://static1.squarespace.com/static/58dc5121ebbd1af18052424a/t/58f560dbe4fcb545b9f9af37/1492476128990/PARALLEL+LINES+PRACTICE+PROBLEMS.pdf" target="_blank">
                     <p>Practice Problems</p> 
@@ -162,8 +162,8 @@
             </div>
             <div class="wrapper">
                 <a class="box-linkVL"href="https://www.youtube.com/watch?v=FeEGRKVqNMA&list=PL8huMKDf0j8oJ8RF-q_ufdmqvS-acretz" target="_blank">
-                    <P>VIDEO</P>
-                    <p>LESSON</p>
+                    <P>Video</P>
+                    <p>Lesson</p>
                 </a>
                 <a class="box-linkPPAA"href="https://static1.squarespace.com/static/58dc5121ebbd1af18052424a/t/58f561796b8f5b633222131e/1492476287417/PERPENDICULAR+LINES+PRACTICE+PROBLEMS.pdf" target="_blank">
                     <p>Practice Problems</p> 
@@ -177,8 +177,8 @@
             </div>
             <div class="wrapper">
                 <a class="box-linkVL"href="https://www.youtube.com/watch?v=HUa9Cl8XpXY&list=PL8huMKDf0j8qI4r-2h_onJFQPa1oUoI6K" target="_blank">
-                    <P>VIDEO</P>
-                    <p>LESSON</p>
+                    <P>Video</P>
+                    <p>Lesson</p>
                 </a>
                 <a class="box-linkPPAA"href="https://static1.squarespace.com/static/58dc5121ebbd1af18052424a/t/58f562ce8419c294a6ea5a08/1492476624289/SYSTEMS+OF+EQUATIONS+-+SUBSTITUTION+METHOD+PRACTICE+PROBLEMS.pdf" target="_blank">
                     <p>Practice Problems</p> 
@@ -192,8 +192,8 @@
             </div>
             <div class="wrapper">
                 <a class="box-linkVL"href="https://www.youtube.com/watch?v=3kdMCbeJWMA&list=PL8huMKDf0j8qCS0ig4skVt_JKm0KQqNEW" target="_blank">
-                    <P>VIDEO</P>
-                    <p>LESSON</p>
+                    <P>Video</P>
+                    <p>Lesson</p>
                 </a>
                 <a class="box-linkPPAA"href="https://static1.squarespace.com/static/58dc5121ebbd1af18052424a/t/58f5637be6f2e1ab28c064f8/1492476803733/SYSTEMS+OF+EQUATIONS+-+COMPARISON+METHOD+PRACTICE+PROBLEMS.pdf" target="_blank">
                     <p>Practice Problems</p> 
@@ -207,8 +207,8 @@
             </div>
             <div class="wrapper">
                 <a class="box-linkVL"href="https://www.youtube.com/watch?v=lp7SFojHYvY&list=PL8huMKDf0j8r0kiuW5O2eCVxk42xfU62R" target="_blank">
-                    <P>VIDEO</P>
-                    <p>LESSON</p>
+                    <P>Video</P>
+                    <p>Lesson</p>
                 </a>
                 <a class="box-linkPPAA"href="https://static1.squarespace.com/static/58dc5121ebbd1af18052424a/t/58f563c5bebafbf679d7930c/1492476873546/SYSTEMS+OF+EQUATIONS+-+ELIMINATION+METHOD+PRACTICE+PROBLEMS.pdf" target="_blank">
                     <p>Practice Problems</p> 
