--- a/public/about.html
+++ b/public/about.html
@@ -46,5 +46,10 @@
     </main>
 
 </body>
-<script src="session.js"></script>
+<script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-app.js"></script>
+<script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-firestore.js"></script>
+<script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-auth.js"></script>
+<script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-storage.js"></script>
+<script src="./Firebase.js"></script>
+<script type="module" src="./user-check.js"></script>
 </html>
