--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,7 @@
   <link rel="stylesheet" href="./home.css">
   <link rel="stylesheet" type="text/css" href="./style.css">
   <link rel="stylesheet" href="./styles/navigation.css">
+    <link rel="stylesheet" href="./styles/footer.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 </head>
 <body>
@@ -72,7 +73,7 @@
     </main>
 
     <footer>
-
+        <p>xyzmastery.web.app. All right reserved.</p>
     </footer>
 
 </body>
