--- a/public/linear_relations.html
+++ b/public/linear_relations.html
@@ -28,7 +28,6 @@
 
     <main class="orange">
         <div class="content">
-
             <div class="text-wrapper">
                 <h1> Linear Relations </h1>
             </div>
@@ -50,7 +49,7 @@
             </div>
 
             <div class="wrapper">
-                <a class="box-linkTP"href="#lessons">
+                <a class="box-linkTP"href="#POTCP">
                     <p>TOPIC</p>
                     <p>LIST</p>
                 </a>
