--- a/public/index.html
+++ b/public/index.html
@@ -30,7 +30,7 @@
     <main>
         <p class="XYZM">XYZ <span class="m">M</span><span class="a">a</span><span class="s">s</span><span class="t">t</span><span class="e">e</span><span class="r">r</span><span class="y">y</span></p>
         <span class="XM"></span>
-        <div class="content">
+        <div class="content home">
             <div class="container">
                 <div class="wrapper">
                     <div class="box orange">
@@ -73,7 +73,7 @@
     </main>
 
     <footer>
-        <p>xyzmastery.web.app. All right reserved.</p>
+        <p>Copyright © 2023, xyzmastery. All Rights Reserved.</p>
     </footer>
 
 </body>
