--- a/public/index.html
+++ b/public/index.html
@@ -37,7 +37,7 @@
                         <p>LINEAR </p>
                         <p> RELATIONS</p>
                 </div>
-                <img class="img" src="../public/images/Linear.jpg" alt="Linear">
+                <img class="img" src="./images/Linear.jpg" alt="Linear">
                 </div>
                 <a href="./linear_relations.html"> Go to Linear Relations </a>
             </div>
@@ -46,7 +46,7 @@
                     <div class="box pink">
                         <p>STATISTICS</p>
                 </div>
-                <img class="img" src="../public/images/Statistic.jpg" alt="Stat">
+                <img class="img" src="./images/Statistic.jpg" alt="Stat">
                 </div>
                 <a href="./Statistics.html"> Go to Statistics </a>
             </div>
@@ -55,7 +55,7 @@
                     <div class="box green">
                         <p>GEOMETRY</p>
                 </div>
-                <img class="img" src="../public/images/Geometry.jpg" alt="Geo">
+                <img class="img" src="./images/Geometry.jpg" alt="Geo">
                 </div>
                 <a href="./Geometry.html"> Go to Geometry </a>
             </div>
@@ -64,7 +64,7 @@
                     <div class="box orangered">
                         <span class="tri">TRIGONOMETRY</span>
                     </div>
-                    <img class="img" src="../public/images/Trigo.jpg" alt="Trigo">
+                    <img class="img" src="./images/Trigo.jpg" alt="Trigo">
                 </div>
                 <a href="./Trigonometry.html"> Go to Trigonometry </a>
             </div>
